--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>Ohmyfood</title>
+        <title>Accueil</title>
         <link rel="stylesheet" href="css/normalize.css" media="all">
         <link rel="stylesheet" href="css/reset.css" media="all">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -11,19 +11,112 @@
     </head>
     <body>
         <div id="container">
-            <header>
+            <div class="loader">
+                <div class="loader__text loader__text--1">oh</div>
+                <div class="loader__text loader__text--2">my</div>
+                <div class="loader__text loader__text--3">food</div>
+            </div>
+            <header class="header">
+                <h1 class="header__logo">ohmyfood</h1>
             </header>
             <main>
-                <section>
+                <div class="location">
+                    <i class="location__ico fa-solid fa-location-dot"></i>
+                    <input class="location__search" type="search" value="Paris, Belleville">
+                </div>
+                <section class="intro">
+                    <h2 class="intro__title">Réservez le menu qui vous convient</h2>
+                    <p class="intro__paragraph">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+                    <a href="#restos" class="intro__link">Explorer nos restaurants</a>
                 </section>
-                <section>
+                <section class="operations">
+                    <h2 class="operations__title">Fonctionnement</h2>
+                    <div class="operations__content">
+                        <a href="" class="operation">
+                            <span>1</span>
+                            <i class="fa-solid fa-mobile-screen-button"></i>
+                            <h3>Choisissez un restaurant</h3>
+                        </a>
+                        <a href="" class="operation">
+                            <span>2</span>
+                            <i class="fa-solid fa-list-ul"></i>
+                            <h3>Composez votre menu</h3>
+                        </a>
+                        <a href="" class="operation">
+                            <span>3</span>
+                            <i class="fa-solid fa-store"></i>
+                            <h3>Dégustez au restaurant</h3>
+                        </a>
+                    </div>
                 </section>
-                <section>
-                </section>
-                <section>
+                <section id="restos" class="restaurants">
+                    <h2 class="restaurants__title">Restaurants</h2>
+                    <div class="restaurants__content">
+                        <a href="" class="restaurant">
+                            <img src="./restos/la_palette_du_gout/la_palette_du_gout.jpg" alt="">
+                            <span class="newmark">Nouveau</span>
+                            <div class="restaurant__info">
+                                <div class="restaurant__info__text">
+                                    <h3>La palette du goût</h3>
+                                    <p>Ménilmontant</p>
+                                </div>
+                                <div class="heart">
+                                    <i class="heart__empty fa-regular fa-heart"></i>
+                                    <i class="heart__full fa-solid fa-heart"></i>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="./restos/la_note_enchantee/index.html" class="restaurant">
+                            <img src="./restos/la_note_enchantee/la_note_enchantee.jpg" alt="">
+                            <span class="newmark">Nouveau</span>
+                            <div class="restaurant__info">
+                                <div class="restaurant__info__text">
+                                    <h3>La note enchantée</h3>
+                                    <p>Charonne</p>
+                                </div>
+                                <div class="heart">
+                                    <i class="heart__empty fa-regular fa-heart"></i>
+                                    <i class="heart__full fa-solid fa-heart"></i>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="" class="restaurant">
+                            <img src="./restos/a_la_francaise/a_la_francaise.jpg" alt="">
+                            <div class="restaurant__info">
+                                <div class="restaurant__info__text">
+                                    <h3>À la française</h3>
+                                    <p>Cité Rouge</p>
+                                </div>
+                                <div class="heart">
+                                    <i class="heart__empty fa-regular fa-heart"></i>
+                                    <i class="heart__full fa-solid fa-heart"></i>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="" class="restaurant">
+                            <img src="./restos/le_delice_des_sens/le_delice_des_sens.jpg" alt="">
+                            <div class="restaurant__info">
+                                <div class="restaurant__info__text">
+                                    <h3>Le délice des sens</h3>
+                                    <p>Folie-Méricourt</p>
+                                </div>
+                                <div class="heart">
+                                    <i class="heart__empty fa-regular fa-heart"></i>
+                                    <i class="heart__full fa-solid fa-heart"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 </section>
             </main>
-            <footer>
+            <footer class="footer">
+                <span class="footer__title">ohmyfood</span>
+                <ul class="footer__list">
+                    <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                    <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
+                    <li><a href="#">Mentions légales</a></li>
+                    <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+                </ul>
             </footer>
         </div>
     </body>
