--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <h1 class="header__logo">ohmyfood</h1>
             </header>
             <main>
-                <div class="location">
+                <form class="location">
                     <i class="location__ico fa-solid fa-location-dot"></i>
                     <input class="location__search" type="search" value="Paris, Belleville">
-                </div>
+                </form>
                 <section class="intro">
                     <h2 class="intro__title">Réservez le menu qui vous convient</h2>
                     <p class="intro__paragraph">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
@@ -53,7 +53,7 @@
                     <h2 class="restaurants__title">Restaurants</h2>
                     <div class="restaurants__content">
                         <a href="" class="restaurant">
-                            <img src="./restos/la_palette_du_gout/la_palette_du_gout.jpg" alt="">
+                            <img src="./restos/la_palette_du_gout/la_palette_du_gout.jpg" alt="Restaurant La palette du goût">
                             <span class="newmark">Nouveau</span>
                             <div class="restaurant__info">
                                 <div class="restaurant__info__text">
@@ -67,7 +67,7 @@
                             </div>
                         </a>
                         <a href="./restos/la_note_enchantee/index.html" class="restaurant">
-                            <img src="./restos/la_note_enchantee/la_note_enchantee.jpg" alt="">
+                            <img src="./restos/la_note_enchantee/la_note_enchantee.jpg" alt="Restaurant La note enchantée">
                             <span class="newmark">Nouveau</span>
                             <div class="restaurant__info">
                                 <div class="restaurant__info__text">
@@ -81,7 +81,7 @@
                             </div>
                         </a>
                         <a href="" class="restaurant">
-                            <img src="./restos/a_la_francaise/a_la_francaise.jpg" alt="">
+                            <img src="./restos/a_la_francaise/a_la_francaise.jpg" alt="Restaurant À la française">
                             <div class="restaurant__info">
                                 <div class="restaurant__info__text">
                                     <h3>À la française</h3>
@@ -94,7 +94,7 @@
                             </div>
                         </a>
                         <a href="" class="restaurant">
-                            <img src="./restos/le_delice_des_sens/le_delice_des_sens.jpg" alt="">
+                            <img src="./restos/le_delice_des_sens/le_delice_des_sens.jpg" alt="Restaurant Le délice des sens">
                             <div class="restaurant__info">
                                 <div class="restaurant__info__text">
                                     <h3>Le délice des sens</h3>
