--- a/restos/la_note_enchantee/index.html
+++ b/restos/la_note_enchantee/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <meta charcontent="utf-8">
+        <meta charset="utf-8">
         <title>Menu - La note enchantée</title>
         <link rel="stylesheet" href="../../css/normalize.css" media="all">
         <link rel="stylesheet" href="../../css/reset.css" media="all">
@@ -17,7 +17,7 @@
             </header>
             <main>
                 <section class="title">
-                    <img src="./la_note_enchantee.jpg" alt="">
+                    <img src="./la_note_enchantee.jpg" alt="Restaurant La note enchantée">
                     <div class="title__info">
                         <h2>La note enchantée</h2>
                         <div class="heart">
@@ -27,10 +27,10 @@
                     </div>
                 </section>
                 <section class="sectionmain">
-                    <section class="dishs">
-                        <span class="dishs__type">ENTRÉES</span>
+                    <div class="dishs">
+                        <h2 class="dishs__type">ENTRÉES</h2>
                         <div class="dishs__content dishs__content--1">
-                            <a href="" class="dish">
+                            <a href="#" class="dish">
                                 <div class="dish__text">
                                     <h3>Ravioles de foie gras</h3>
                                     <p>Accompagnées de leur crème a la truffe</p>
@@ -42,7 +42,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="" class="dish">
+                            <a href="#" class="dish">
                                 <div class="dish__text">
                                     <h3>Caviar osciètre</h3>
                                     <p>Sur blini à la farine de blé noir</p>
@@ -54,7 +54,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="" class="dish">
+                            <a href="#" class="dish">
                                 <div class="dish__text">
                                     <h3>Homard et espuma de potiron</h3>
                                     <p>Mariné aux zestes d'orange</p>
@@ -66,7 +66,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="" class="dish">
+                            <a href="#" class="dish">
                                 <div class="dish__text">
                                     <h3>Foie gras de canard cuit entier</h3>
                                     <p>Confiture de figue et pain toasté</p>
@@ -79,11 +79,11 @@
                                 </div>
                             </a>
                         </div>
-                    </section>
-                    <section class="dishs">
-                        <span class="dishs__type">PLATS</span>
+                    </div>
+                    <div class="dishs">
+                        <h2 class="dishs__type">PLATS</h2>
                         <div class="dishs__content dishs__content--2">
-                            <a href="" class="dish">
+                            <a href="#" class="dish">
                                 <div class="dish__text">
                                     <h3>Noix de coquilles Saint-Jacques</h3>
                                     <p>Sur lit de purée de céleri-rave</p>
@@ -95,7 +95,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="" class="dish">
+                            <a href="#" class="dish">
                                 <div class="dish__text">
                                     <h3>Langoustine poêlée</h3>
                                     <p>Purée de patate douce</p>
@@ -107,7 +107,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="" class="dish">
+                            <a href="#" class="dish">
                                 <div class="dish__text">
                                     <h3>Mijoté de queue de boeuf</h3>
                                     <p>Et riz sauvage aux zestes de citron</p>
@@ -120,11 +120,11 @@
                                 </div>
                             </a>
                         </div>
-                    </section>
-                    <section class="dishs">
-                        <span class="dishs__type">DESSERTS</span>
+                    </div>
+                    <div class="dishs">
+                        <h2 class="dishs__type">DESSERTS</h2>
                         <div class="dishs__content dishs__content--3">
-                            <a href="" class="dish">
+                            <a href="#" class="dish">
                                 <div class="dish__text">
                                     <h3>Macaron noisette et chocolat</h3>
                                     <p>Glace au caramel brun et sel de Guérande</p>
@@ -136,7 +136,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="" class="dish">
+                            <a href="#" class="dish">
                                 <div class="dish__text">
                                     <h3>Baba au rhum revisité</h3>
                                     <p>Avec son coulis de citron</p>
@@ -148,7 +148,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="" class="dish">
+                            <a href="#" class="dish">
                                 <div class="dish__text">
                                     <h3>Tarte au citron meringuée</h3>
                                     <p>Déstructurée</p>
@@ -161,11 +161,11 @@
                                 </div>
                             </a>
                         </div>
-                    </section>
+                    </div>
                 </section>
-                <section class="btn">
-                    <a href="" class="btn__order">Commander</a>
-                </section>
+                <div class="btn">
+                    <a href="#" class="btn__order">Commander</a>
+                </div>
             </main>
             <footer class="footer">
                 <span class="footer__title">ohmyfood</span>
