Ajout des autres pages menus

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <section id="restos" class="restaurants">
                     <h2 class="restaurants__title">Restaurants</h2>
                     <div class="restaurants__content">
-                        <a href="" class="restaurant">
+                        <a href="./restos/la_palette_du_gout/index.html" class="restaurant">
                             <img src="./restos/la_palette_du_gout/la_palette_du_gout.jpg" alt="Restaurant La palette du goût">
                             <span class="newmark">Nouveau</span>
                             <div class="restaurant__info">
@@ -80,7 +80,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="" class="restaurant">
+                        <a href="./restos/a_la_francaise/index.html" class="restaurant">
                             <img src="./restos/a_la_francaise/a_la_francaise.jpg" alt="Restaurant À la française">
                             <div class="restaurant__info">
                                 <div class="restaurant__info__text">
@@ -93,7 +93,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="" class="restaurant">
+                        <a href="./restos/le_delice_des_sens/index.html" class="restaurant">
                             <img src="./restos/le_delice_des_sens/le_delice_des_sens.jpg" alt="Restaurant Le délice des sens">
                             <div class="restaurant__info">
                                 <div class="restaurant__info__text">
